[Add]Add get all endpoint
